<resources>
    <string name="app_name">MarketPlace</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>


    <string name="menu_gallery">Gallery</string>
    <string name="menu_home">Home</string>
    <string name="menu_invoice">Invoice</string>
    <string name="menu_inventory">Inventory</string>
    <string name="mobile">mobile</string>
    <string name="buyer_name">Buyer Name</string>
    <string name="invoice_date">Invoice Date</string>
    <string name="invoice_total">100.00</string>
    <string name="todo">TODO</string>
    <string name="invoiceTotal">Total:</string>
    <string name="invoicePaid">Paid:</string>
    <string name="business_name">Business Name</string>
    <string name="client_heading">TO:</string>
    <string name="clientName">Client Name</string>
    <string name="item_name">Item Name</string>
    <string name="quantity">Quantity</string>
    <string name="price">Price</string>
    <string name="total">Total</string>
    <string name="sub_total">Sub Total</string>
</resources>